--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>20-css-kolory-tla-i-czcionek</title>
-    <link rel="Stylesheet" type="text/css" href="style.css"/>
+    <link rel="Stylesheet" type="text/css" href="style.css" />
 </head>
+
 <body>
     <h1>Główny Tytuł</h1>
-    <p1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus iusto reiciendis similique alias deserunt praesentium provident quo, odio ex ipsa rerum molestias magni quae voluptas cum molestiae. Ab, reiciendis ipsa?</p1>
+    <p id="pierwszy">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus iusto reiciendis similique
+        alias deserunt praesentium provident quo, odio ex ipsa rerum molestias magni quae voluptas cum molestiae. Ab,
+        reiciendis ipsa?</p1>
     <h3>Podtytuł</h3>
-    <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, assumenda.</p2>
-     <!-- ol>li*5>span$>{item} -->   
-     <ol>
+    <p id="drugi">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, assumenda.</p2>
+        <!-- ol>li*5>span$>{item} -->
+    <ol>
         <li>
             <span1>item</span1>
         </li>
@@ -29,8 +33,9 @@
         <li>
             <span5>item</span5>
         </li>
-     </ol>
-    
+    </ol>
+
 
 </body>
+
 </html>
